# polka-picker

./: README.md  spec.md
Picker/: README.md
Picker/apps/picker-nodejs-project/: README.md
Picker/apps/picker-python-project/: README.md
Picker/desktop/src-tauri/: Cargo.toml  README.md
chain-capability-mcp-server/src/: create_erc20_token.rs  main.rs
contract/: hardhat.config.ts  package-lock.json  package.json  spec.md
contract/contracts/: PickerPayment.sol
desktop/: index.html  package-lock.json  package.json  spec.md  tauri-frontend-ui-development.md
desktop/src/: App-test.css  App-test.tsx  App.css  App.tsx  README-test.md  main.tsx
desktop/src-tauri/: Cargo.toml  README.md  openapi.md  tauri.conf.json
desktop/src-tauri/src/: config.rs  lib.rs
desktop/src-tauri/tests/: README.md  api_client_test.rs  api_client_test_no_retry.rs  api_client_test_sync.rs  api_models_test.rs  integration_test.rs  (+2 more)
rust-agent-crate/: Cargo.toml  README.md
rust-agent-crate/examples/: agent_example.rs  mcp_agent_chatbot.rs
rust-agent-crate/src/: lib.rs
server/: .gitignore  API-Testing-Summary.md  Cargo.toml  PowerShell-API-Testing-Guide.md  README.md  TESTING.md  TESTING_SUMMARY.md  config.toml  debug-test.ps1  final-test.ps1  quick-test-en.ps1  quick-test.ps1  run-tests.ps1  single-api-examples.ps1  spec.md
server/migrations/: 001_initial.sql
server/src/: config.rs  database.rs  download.rs  lib.rs  main.rs  middleware.rs  models.rs  test_utils.rs  utils.rs
server/src/handlers/: mod.rs  orders.rs  pickers.rs  users.rs
server/tests/: integration_tests.rs
(+47 files in other folders)
