[package]
name = "pickers-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["multipart", "macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
chrono = { version = "0.4.42", features = ["serde"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-util = "0.7"
hex = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
jsonwebtoken = "9.0"
bcrypt = "0.17.1"
reqwest = { version = "0.12", features = ["json"] }
regex = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "18.1.0"
tower = "0.5"
tempfile = "3.0"
mockall = "0.13.1"
serial_test = "3.0"
pretty_assertions = "1.0"
